--- a/config/prow/deployments/tide.yaml
+++ b/config/prow/deployments/tide.yaml
@@ -43,6 +43,8 @@ spec:
       - name: tide
         image: gcr.io/k8s-prow/tide:v20200130-51abc4f96
         args:
+        - --config-path=/etc/config/config.yaml
+        - --job-config-path=/etc/job-config
         - --dry-run=false
         ports:
           - name: http
@@ -54,6 +56,9 @@ spec:
         - name: config
           mountPath: /etc/config
           readOnly: true
+        - name: job-config
+          mountPath: /etc/job-config
+          readOnly: true
       volumes:
       - name: oauth
         secret:
@@ -61,3 +66,6 @@ spec:
       - name: config
         configMap:
           name: config
+      - name: job-config
+        configMap:
+          name: job-config
