--- a/config/prow/staging/plugins.yaml
+++ b/config/prow/staging/plugins.yaml
@@ -37,7 +37,7 @@ project_config:
   project_org_configs:
     knative:
       org_maintainers_team_id: 2652083 # knative-admin
-      # TODO(Fredy-Z): Enable the plugin for other repos when needed.
+      # TODO(chizhg): Enable the plugin for other repos when needed.
       project_repo_configs:
         eventing:
           # TODO(grantr): replace with a new team eventing-project-maintainers
@@ -47,6 +47,18 @@ project_config:
         eventing-contrib:
           # TODO(grantr): replace with a new team eventing-contrib-project-maintainers
           repo_maintainers_team_id: 3012514 # knative-milestone-maintainers
+# Settings for the "label" plugin.
+label:
+  additional_labels:
+  - proposal/0.11
+  - proposal/0.12
+  - proposal/0.13
+  - proposal/0.14
+  - proposal/0.15
+  - proposal/0.16
+  - proposal/0.17
+  - proposal/0.18
+  - proposal/0.19
 # Plugins enabled for each repo.
 plugins:
   knative-prow-robot/serving:
@@ -65,14 +77,15 @@ plugins:
   - lifecycle
   - milestone
   - owners-label
+  - project
   - shrug
   - size
   - skip
   - trigger
   - verify-owners
+  - welcome
   - wip
   - yuks
-  - project
   knative-prow-robot/test-infra:
   - approve
   - assign
@@ -89,11 +102,12 @@ plugins:
   - lifecycle
   - milestone
   - owners-label
+  - project
   - shrug
   - size
   - skip
   - trigger
   - verify-owners
+  - welcome
   - wip
   - yuks
-  - project
