--- a/config/prow/deployments/crier.yaml
+++ b/config/prow/deployments/crier.yaml
@@ -34,9 +34,13 @@ spec:
         - --pubsub-workers=5 # Arbitrary number of multiplier
         - --report-agent=knative-build
         - --config-path=/etc/config/config.yaml
+        - --job-config-path=/etc/job-config
         volumeMounts:
         - name: config
           mountPath: /etc/config
+          readOnly: true
+        - name: job-config
+          mountPath: /etc/job-config
           readOnly: true
         - name: oauth
           mountPath: /etc/github
@@ -45,6 +49,9 @@ spec:
       - name: config
         configMap:
           name: config
+      - name: job-config
+        configMap:
+          name: job-config
       - name: oauth
         secret:
           secretName: oauth-token
