--- a/config/prow/deployments/hook.yaml
+++ b/config/prow/deployments/hook.yaml
@@ -39,6 +39,8 @@ spec:
         imagePullPolicy: Always
         args:
         - --dry-run=false
+        - --config-path=/etc/config/config.yaml
+        - --job-config-path=/etc/job-config
         ports:
           - name: http
             containerPort: 8888
@@ -51,6 +53,9 @@ spec:
           readOnly: true
         - name: config
           mountPath: /etc/config
+          readOnly: true
+        - name: job-config
+          mountPath: /etc/job-config
           readOnly: true
         - name: plugins
           mountPath: /etc/plugins
@@ -65,6 +70,9 @@ spec:
       - name: config
         configMap:
           name: config
+      - name: job-config
+        configMap:
+          name: job-config
       - name: plugins
         configMap:
           name: plugins
