--- a/config/prow/deployments/horologium.yaml
+++ b/config/prow/deployments/horologium.yaml
@@ -30,11 +30,21 @@ spec:
       containers:
       - name: horologium
         image: gcr.io/k8s-prow/horologium:v20200130-51abc4f96
+        args:
+        - --config-path=/etc/config/config.yaml
+        - --job-config-path=/etc/job-config
+        - --dry-run=false
         volumeMounts:
         - name: config
           mountPath: /etc/config
+          readOnly: true
+        - name: job-config
+          mountPath: /etc/job-config
           readOnly: true
       volumes:
       - name: config
         configMap:
           name: config
+      - name: job-config
+        configMap:
+          name: job-config
