additional labels for eventing-contribs

--- a/config/prow/plugins.yaml
+++ b/config/prow/plugins.yaml
@@ -74,6 +74,15 @@ label:
   - proposal/0.17
   - proposal/0.18
   - proposal/0.19
+  - channel/kafka
+  - channel/natss
+  - source/awssqs
+  - source/camel
+  - source/ceph
+  - source/couchdb
+  - source/github
+  - source/kafka
+  - source/prometheus
 # Plugins enabled for each repo.
 plugins:
   google/knative-gcp:
