--- a/config/prow/templates/prow_plugins.yaml
+++ b/config/prow/templates/prow_plugins.yaml
@@ -63,6 +63,8 @@ label:
   - proposal/0.17
   - proposal/0.18
   - proposal/0.19
+
+  # eventing-contrib labels
   - channel/kafka
   - channel/natss
   - source/awssqs
