additional labels for eventing-contrib (#1697)
* additional labels for eventing-contribs

* add comment about lables being eventing-contrib only

--- a/config/prow/templates/prow_plugins.yaml
+++ b/config/prow/templates/prow_plugins.yaml
@@ -64,6 +64,16 @@ label:
   - proposal/0.18
   - proposal/0.19
 
+  # eventing-contrib labels
+  - channel/kafka
+  - channel/natss
+  - source/awssqs
+  - source/camel
+  - source/ceph
+  - source/couchdb
+  - source/github
+  - source/kafka
+  - source/prometheus
 # Plugins enabled for each repo.
 
 plugins:
