chore: Add "client-contrib" as new repo

--- a/config/prow/config.yaml
+++ b/config/prow/config.yaml
@@ -98,6 +98,7 @@ tide:
     - "google/knative-gcp"
     - "knative/caching"
     - "knative/client"
+    - "knative/client-contrib"
     - "knative/community"
     - "knative/docs"
     - "knative/eventing"
