--- a/config/prow/deployments/hook.yaml
+++ b/config/prow/deployments/hook.yaml
@@ -26,6 +26,9 @@ spec:
     rollingUpdate:
       maxSurge: 1
       maxUnavailable: 1
+  selector:
+    matchLabels:
+      app: hook
   template:
     metadata:
       labels:
@@ -35,7 +38,7 @@ spec:
       terminationGracePeriodSeconds: 180
       containers:
       - name: hook
-        image: gcr.io/k8s-prow/hook:v20200130-51abc4f96
+        image: gcr.io/k8s-prow/hook:v20200204-7e8cd997a
         imagePullPolicy: Always
         args:
         - --dry-run=false
@@ -60,6 +63,19 @@ spec:
         - name: plugins
           mountPath: /etc/plugins
           readOnly: true
+        livenessProbe:
+          httpGet:
+            path: /healthz
+            port: 8081
+          initialDelaySeconds: 3
+          periodSeconds: 3
+        readinessProbe:
+          httpGet:
+            path: /healthz/ready
+            port: 8081
+          initialDelaySeconds: 10
+          periodSeconds: 3
+          timeoutSeconds: 600
       volumes:
       - name: hmac
         secret:
